--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 <body>
   <h1>Welcome to the Simple PWA!</h1>
   <p>This is a basic Progressive Web App example.</p>
+
+  <button id="installButton" style="display: none;">安装应用</button>
+
 </body>
 </html>
     
