--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
   <h1>Welcome to the Simple PWA!</h1>
   <p>This is a basic Progressive Web App example.</p>
 
-  <button id="installButton" style="display: none;">安装应用2</button>
+  <button id="installButton" style="display: none;">Install</button>
 
 </body>
 </html>
