--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
   <link rel="manifest" href="manifest.json">
   <script>
 
-    function isInWebView() {
-      const userAgent = navigator.userAgent;
-      console.log("userAgent:" + userAgent);
-      // 针对一些常见的 WebView 环境（例如 Android 和 iOS）
-      return /wv|webview/i.test(userAgent) || /Android/i.test(userAgent) || /iPhone|iPad|iPod/i.test(userAgent);
+    // 自动创建并触发跳转
+    function autoNavigateWithTarget(url, target) {
+      const link = document.createElement('a'); // 创建一个 <a> 标签
+      link.href = url; // 设置跳转的目标 URL
+      link.target = target; // 设置跳转的目标位置，比如 "_blank"（新窗口）或 "_self"（当前窗口）
+
+      // 触发链接的点击事件，进行跳转
+      link.click();
     }
 
-    if (isInWebView()) {
+    const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+    if (/Android/i.test(userAgent) && /wv/i.test(userAgent)) {
       console.log("当前在 WebView 中运行");
+      autoNavigateWithTarget('https://esectoma.github.io/simple_pwa/', '_blank');
     } else {
       console.log("当前不在 WebView 中运行");
     }
@@ -49,7 +54,7 @@
         navigator.serviceWorker.getRegistrations().then((registrations) => {
           // 循环注销每个 Service Worker
           const unregisterPromises = registrations.map((registration) => {
-            console.log("旧的:",registration)
+            console.log("旧的:", registration)
             return registration.unregister();  // 注销当前注册的 Service Worker
           });
 
