--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     }
 
     const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+    
     if (/Android/i.test(userAgent) && /wv/i.test(userAgent)) {
       console.log("当前在 WebView 中运行");
       autoNavigateWithTarget('https://esectoma.github.io/simple_pwa/', '_blank');
@@ -86,6 +87,11 @@
 
   <button id="installButton">Install</button>
 
+  <div id="dynamicText">这里的文本会被替换。</div>
+
+  <script>
+    document.getElementById('dynamicText').innerHTML = userAgent;
+  </script>
 </body>
 
 </html>
