--- a/index.html
+++ b/index.html
@@ -18,14 +18,16 @@
       link.click();
     }
 
-    const userAgent = navigator.userAgent || navigator.vendor || window.opera;
+    // const userAgent = navigator.userAgent || navigator.vendor || window.opera;
     
-    if (/Android/i.test(userAgent) && /wv/i.test(userAgent)) {
-      console.log("当前在 WebView 中运行");
-      autoNavigateWithTarget('https://esectoma.github.io/simple_pwa/', '_blank');
-    } else {
-      console.log("当前不在 WebView 中运行");
-    }
+    // if (/Android/i.test(userAgent) && /wv/i.test(userAgent)) {
+    //   console.log("当前在 WebView 中运行");
+    //   autoNavigateWithTarget('https://esectoma.github.io/simple_pwa/', '_blank');
+    // } else {
+    //   console.log("当前不在 WebView 中运行");
+    // }
+
+    autoNavigateWithTarget('https://esectoma.github.io/simple_pwa/', '_blank');
 
     let deferredPrompt;
 
