--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     //   console.log("当前不在 WebView 中运行");
     // }
 
-    autoNavigateWithTarget('https://esectoma.github.io/simple_pwa/', '_blank');
+    //autoNavigateWithTarget('https://esectoma.github.io/simple_pwa/', '_blank');
 
     let deferredPrompt;
 
